2007-10-25  Peter Bloomfield

	* libbalsa/Makefile.am:
	* libbalsa/address-entry.c:
	* libbalsa/address-entry.h:
	* libbalsa/address-view.c:
	* libbalsa/address-view.h:
	* src/ab-window.c:
	* src/main.c:
	* src/save-restore.c:
	* src/sendmsg-window.c:
	* src/sendmsg-window.h: initial commit on address-view branch.

2007-10-24  Albrecht Dreß

	* src/balsa-icons.c:
	* src/balsa-message.c:
	* src/balsa-print-object-text.c: More balsa Tangofication.

2007-10-23  Albrecht Dreß

	* configure.in:
	* libbalsa/Makefile.am:
	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-rubrica.h:
	* libbalsa/libbalsa.c:
	* libbalsa/libbalsa.h:
	* src/ab-main.c:
	* src/ab-window.c:
	* src/address-book-config.c:
	* src/main.c:
	* src/pref-manager.c: add support for Rubrica address book.

2007-10-17  Peter Bloomfield

	* libbalsa/mailbox_maildir.c: skip check only if mtime matches
	exactly.
	* src/balsa-index.c: revert to scrolling in an idle callback,
	but now at low priority.

2007-10-15  Peter Bloomfield

	* libbalsa/mailbox_local.c: clarify simple and flat threading.

2007-10-14  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_get_view): do not assert url is not
	in hash table;
	(lbm_sort): set msg-tree-changed;
	(libbalsa_mailbox_unlink_and_prepend): set msg-tree-changed only
	if we are sure it was.
	* libbalsa/mailbox_local.c: (lbm_local_update_view_filter): set
	msg-tree-changed only if it is a flags-only filter; fix bug
	saving and restoring simple threading.
	* src/main-window.c: avoid critical warning if Balsa is closed
	during a threading.

2007-10-10  Peter Bloomfield

	* libbalsa/Makefile.am:
	* libbalsa/address-book-extern.c:
	* libbalsa/address-book-ldap.c:
	* libbalsa/address-book-ldif.c:
	* libbalsa/address-book-text.c:
	* libbalsa/address-book-vcard.c:
	* libbalsa/address-book.c:
	* libbalsa/address.c:
	* libbalsa/body.c:
	* libbalsa/files.c:
	* libbalsa/filter-error.c:
	* libbalsa/filter-file.c:
	* libbalsa/filter.c:
	* libbalsa/gmime-application-pkcs7.c: